--- a/app/src/main/res/layout/games_layout.xml
+++ b/app/src/main/res/layout/games_layout.xml
@@ -9,6 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#00000000"
         app:cardBackgroundColor="#00000000"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
